17,18년도 영상 조회우 통계랑 계산

--- a/youtube/eun-seong/view_count/index.ipynb
+++ b/youtube/eun-seong/view_count/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,96 +42,96 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>가장 보통의 연애</td>\n",
-       "      <td>88459</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>1840826</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>가장 보통의 연애</td>\n",
-       "      <td>67447</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>727895</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>가장 보통의 연애</td>\n",
-       "      <td>65206</td>\n",
+       "      <th>2</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>598318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>가장 보통의 연애</td>\n",
-       "      <td>62709</td>\n",
+       "      <th>3</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>507279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>가장 보통의 연애</td>\n",
-       "      <td>27930</td>\n",
+       "      <th>4</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>502998</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>945</td>\n",
-       "      <td>힘을 내요, 미스터 리</td>\n",
-       "      <td>8006</td>\n",
+       "      <th>965</th>\n",
+       "      <td>혹성탈출: 종의 전쟁</td>\n",
+       "      <td>33907</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>946</td>\n",
-       "      <td>힘을 내요, 미스터 리</td>\n",
-       "      <td>4645</td>\n",
+       "      <th>966</th>\n",
+       "      <td>혹성탈출: 종의 전쟁</td>\n",
+       "      <td>29083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>947</td>\n",
-       "      <td>힘을 내요, 미스터 리</td>\n",
-       "      <td>4507</td>\n",
+       "      <th>967</th>\n",
+       "      <td>혹성탈출: 종의 전쟁</td>\n",
+       "      <td>27377</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>948</td>\n",
-       "      <td>힘을 내요, 미스터 리</td>\n",
-       "      <td>2922</td>\n",
+       "      <th>968</th>\n",
+       "      <td>혹성탈출: 종의 전쟁</td>\n",
+       "      <td>24471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>949</td>\n",
-       "      <td>힘을 내요, 미스터 리</td>\n",
-       "      <td>2905</td>\n",
+       "      <th>969</th>\n",
+       "      <td>혹성탈출: 종의 전쟁</td>\n",
+       "      <td>20335</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>950 rows × 2 columns</p>\n",
+       "<p>970 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              영화명    조회수\n",
-       "0       가장 보통의 연애  88459\n",
-       "1       가장 보통의 연애  67447\n",
-       "2       가장 보통의 연애  65206\n",
-       "3       가장 보통의 연애  62709\n",
-       "4       가장 보통의 연애  27930\n",
-       "..            ...    ...\n",
-       "945  힘을 내요, 미스터 리   8006\n",
-       "946  힘을 내요, 미스터 리   4645\n",
-       "947  힘을 내요, 미스터 리   4507\n",
-       "948  힘을 내요, 미스터 리   2922\n",
-       "949  힘을 내요, 미스터 리   2905\n",
+       "             영화명      조회수\n",
+       "0           1987  1840826\n",
+       "1           1987   727895\n",
+       "2           1987   598318\n",
+       "3           1987   507279\n",
+       "4           1987   502998\n",
+       "..           ...      ...\n",
+       "965  혹성탈출: 종의 전쟁    33907\n",
+       "966  혹성탈출: 종의 전쟁    29083\n",
+       "967  혹성탈출: 종의 전쟁    27377\n",
+       "968  혹성탈출: 종의 전쟁    24471\n",
+       "969  혹성탈출: 종의 전쟁    20335\n",
        "\n",
-       "[950 rows x 2 columns]"
+       "[970 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "view_count_df = pd.read_csv('videoList_final.csv').loc[:,['영화 제목', '조회수']]\n",
+    "view_count_df = pd.read_csv('videoList_final_2.csv').loc[:,['영화 제목', '조회수']]\n",
     "view_count_df.rename(columns={'영화 제목': '영화명'}, inplace=True)\n",
     "view_count_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,94 +172,94 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>#살아있다</td>\n",
-       "      <td>2955998</td>\n",
-       "      <td>295599.8</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>5502660</td>\n",
+       "      <td>550266.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>1917</td>\n",
-       "      <td>787714</td>\n",
-       "      <td>78771.4</td>\n",
+       "      <th>1</th>\n",
+       "      <td>23 아이덴티티</td>\n",
+       "      <td>1337781</td>\n",
+       "      <td>133778.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>82년생 김지영</td>\n",
-       "      <td>3722539</td>\n",
-       "      <td>372253.9</td>\n",
+       "      <th>2</th>\n",
+       "      <td>PMC: 더 벙커</td>\n",
+       "      <td>1758530</td>\n",
+       "      <td>175853.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>가장 보통의 연애</td>\n",
-       "      <td>396635</td>\n",
-       "      <td>39663.5</td>\n",
+       "      <th>3</th>\n",
+       "      <td>가디언즈 오브 갤럭시 VOL. 2</td>\n",
+       "      <td>3366513</td>\n",
+       "      <td>336651.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>강철비2: 정상회담</td>\n",
-       "      <td>2405868</td>\n",
-       "      <td>240586.8</td>\n",
+       "      <th>4</th>\n",
+       "      <td>강철비</td>\n",
+       "      <td>1116835</td>\n",
+       "      <td>111683.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>90</td>\n",
-       "      <td>프리즌 이스케이프</td>\n",
-       "      <td>3479761</td>\n",
-       "      <td>347976.1</td>\n",
+       "      <th>92</th>\n",
+       "      <td>특별시민</td>\n",
+       "      <td>832769</td>\n",
+       "      <td>83276.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>91</td>\n",
-       "      <td>항거:유관순 이야기</td>\n",
-       "      <td>669208</td>\n",
-       "      <td>66920.8</td>\n",
+       "      <th>93</th>\n",
+       "      <td>프리즌</td>\n",
+       "      <td>207989</td>\n",
+       "      <td>20798.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>92</td>\n",
-       "      <td>해치지않아</td>\n",
-       "      <td>537360</td>\n",
-       "      <td>53736.0</td>\n",
+       "      <th>94</th>\n",
+       "      <td>해피 데스데이</td>\n",
+       "      <td>791978</td>\n",
+       "      <td>79197.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>93</td>\n",
-       "      <td>히트맨</td>\n",
-       "      <td>509315</td>\n",
-       "      <td>50931.5</td>\n",
+       "      <th>95</th>\n",
+       "      <td>협상</td>\n",
+       "      <td>3710363</td>\n",
+       "      <td>371036.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>94</td>\n",
-       "      <td>힘을 내요, 미스터 리</td>\n",
-       "      <td>214374</td>\n",
-       "      <td>21437.4</td>\n",
+       "      <th>96</th>\n",
+       "      <td>혹성탈출: 종의 전쟁</td>\n",
+       "      <td>502500</td>\n",
+       "      <td>50250.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>95 rows × 3 columns</p>\n",
+       "<p>97 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             영화명    조회수 합    조회수 평균\n",
-       "0          #살아있다  2955998  295599.8\n",
-       "1           1917   787714   78771.4\n",
-       "2       82년생 김지영  3722539  372253.9\n",
-       "3      가장 보통의 연애   396635   39663.5\n",
-       "4     강철비2: 정상회담  2405868  240586.8\n",
-       "..           ...      ...       ...\n",
-       "90     프리즌 이스케이프  3479761  347976.1\n",
-       "91    항거:유관순 이야기   669208   66920.8\n",
-       "92         해치지않아   537360   53736.0\n",
-       "93           히트맨   509315   50931.5\n",
-       "94  힘을 내요, 미스터 리   214374   21437.4\n",
+       "                   영화명    조회수 합    조회수 평균\n",
+       "0                 1987  5502660  550266.0\n",
+       "1             23 아이덴티티  1337781  133778.1\n",
+       "2            PMC: 더 벙커  1758530  175853.0\n",
+       "3   가디언즈 오브 갤럭시 VOL. 2  3366513  336651.3\n",
+       "4                  강철비  1116835  111683.5\n",
+       "..                 ...      ...       ...\n",
+       "92                특별시민   832769   83276.9\n",
+       "93                 프리즌   207989   20798.9\n",
+       "94             해피 데스데이   791978   79197.8\n",
+       "95                  협상  3710363  371036.3\n",
+       "96         혹성탈출: 종의 전쟁   502500   50250.0\n",
        "\n",
-       "[95 rows x 3 columns]"
+       "[97 rows x 3 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,12 +274,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "view_count_stat.to_csv('view_count_state.csv', encoding='utf-8-sig')"
+    "view_count_stat.to_csv('view_count_state_2.csv', encoding='utf-8-sig')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -287,7 +294,7 @@
    "hash": "2dd290a418093d1e183a5757e92062b1f4948604f8a73f053696e0d57a6c3d5a"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -301,9 +308,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.7"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
